--- a/ex01_20230130/index.html
+++ b/ex01_20230130/index.html
@@ -4,9 +4,116 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>CSC105</title>
+        <title>Bugatti Shop</title>
+        <link rel="stylesheet" href="./css/style.css" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+            crossorigin="anonymous"
+        />
     </head>
-    <body>
-        <h1>hello</h1>
+    <body class="m-5">
+        <h1 class="display-4">Which one is your bugatti?</h1>
+        <div class="link">
+            <span>Visit our shop</span>
+            <a href="https://www.bugatti.com/" target="_blank">Here</a>
+        </div>
+        <table class="table">
+            <tr>
+                <th>Picture</th>
+                <th>Model</th>
+                <th>Price</th>
+                <th>Tate family who own this</th>
+            </tr>
+            <tr>
+                <td>
+                    <img
+                        height="110px"
+                        width="200px"
+                        src="./img/bugatti1.png"
+                        alt="Blue bugatti"
+                    />
+                </td>
+                <td>Blue Bugatti</td>
+                <td>$2.7M</td>
+                <td>
+                    <ul>
+                        <li>Andrewie Tate</li>
+                        <li>Tristie Tate</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img
+                        height="110px"
+                        width="200px"
+                        src="./img/bugatti2.jpg"
+                        alt="White bugatti"
+                    />
+                </td>
+                <td>White Bugatti</td>
+                <td>$3.0M</td>
+                <td>
+                    <ul>
+                        <li>Lawrie Tate</li>
+                        <li>Dylie Tate</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img
+                        height="110px"
+                        width="200px"
+                        src="./img/bugatti3.jpg"
+                        alt="Gold bugatti"
+                    />
+                </td>
+                <td>Gold Bugatti</td>
+                <td>$3.3M</td>
+                <td>
+                    <ul>
+                        <li>Nessie Tate</li>
+                        <li>Kyawie Tate</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img
+                        height="120px"
+                        width="200px"
+                        src="./img/bugatti4.png"
+                        alt="Black bugatti"
+                    />
+                </td>
+                <td>Black Bugatti</td>
+                <td>$2.8M</td>
+                <td>
+                    <ul>
+                        <li>Teddie Tate</li>
+                        <li>Andie Tate</li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+        <div>
+            <h3>List of Bugatti by Year</h3>
+            <ol>
+                <li>Bugatti 2018</li>
+                <li>Bugatti 2019</li>
+                <li>Bugatti 2020</li>
+                <li>Bugatti 2021</li>
+                <li>Bugatti 2022</li>
+            </ol>
+        </div>
+
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
